--- a/Melodify Frontend/user/album.html
+++ b/Melodify Frontend/user/album.html
@@ -13,14 +13,11 @@
     <script src="../js/jwt.js" defer></script>
     <script src="../js/redirectToLogin.js" defer></script>
     <script src="../js/redirect.js" defer></script>
+    <script src="../js/iframeMusic.js" defer></script>
 
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
 
     <script>
-        function playAlbum() {
-            window.parent.postMessage({action: 'navigateToArtist', artistId: "artist.id"}, '*');
-        }
-
         const urlParams = new URLSearchParams(window.location.search);
         const albumId = urlParams.get('id');
 
@@ -28,11 +25,11 @@
             .then(response => response.json())
             .then(albumData => {
                 document.querySelector('#album h1').innerText = albumData.name;
-                document.querySelector('#album h1').onclick = function (){
-                    playAlbum();
+                document.querySelector('#album h1').onclick = function () {
+                    playAlbum(albumId);
                 };
-                document.querySelector('.image-container div').onclick = function (){
-                    playAlbum();
+                document.querySelector('.image-container div').onclick = function () {
+                    playAlbum(albumId);
                 }
                 document.querySelector('.artist-info img').src = albumData.artists[0].image;
                 document.querySelector('.artist-info p').innerText = albumData.artists[0].name;
@@ -76,7 +73,7 @@
 <main id="album">
     <div class="media-banner">
         <div class="image-container">
-            <img src="./../album.jpg">
+            <img alt="album image" src="">
             <div>
                 <span class="fa fa-circle-play"></span>
             </div>
@@ -85,7 +82,7 @@
             <h1>AlbumName</h1>
             <div class="additional_info">
                 <div class="artist-info">
-                    <img src="../prince%20michael.jpg">
+                    <img alt="artist image" src="">
                     <p>Artist Name</p>
                 </div>
                 <p>Date</p>
