Fixed queue and player functionality

--- a/Melodify Frontend/user/index.html
+++ b/Melodify Frontend/user/index.html
@@ -84,7 +84,7 @@
 <div id="player">
     <div id="track_info">
         <div class="item">
-            <img src="./../album.jpg">
+            <img src="">
             <div class="info">
                 <p class="name">Song name</p>
                 <p class="author">Album name</p>
@@ -102,7 +102,7 @@
             <input type="range"/>
             <p id="duration">0:00</p>
         </div>
-        <audio src=""></audio>
+        <audio></audio>
     </div>
     <div id="account">
         <button onclick="toggleSidebar()"><span class="fa fa-bookmark active"></span></button>
@@ -112,7 +112,7 @@
             <span class="fa fa-volume-low"></span>
             <input type="range" min="0" max="1" step="0.1">
         </div>
-        <img src="" onclick="navigate('./profile.html', false)">
+        <img alt="./images/users/guest-user.png" src="" onclick="navigate('./profile.html', false)">
     </div>
 </div>
 </body>
