Allowed refreshes of pages and improved creating plyalists experience

--- a/Melodify Frontend/user/album.html
+++ b/Melodify Frontend/user/album.html
@@ -14,7 +14,7 @@
     <script src="../js/redirectToLogin.js" defer></script>
     <script src="../js/redirect.js" defer></script>
     <script src="../js/iframeMusic.js" defer></script>
-    <script src="../js/addToPlaylist.js" defer></script>
+    <script src="../js/playlistOperations.js" defer></script>
 
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
 
